--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
             <nav  id="Bar" style="color: rgb(2, 100, 100);">
                 <h1 id="home" align="center" style="font-family: 'Ubuntu', serif; color: white;">Inicio</h1>
             </nav>
-            <input type="text">
-            <!--<label for="Bar">
+
+
+            <!--Codigo morto-->
+            <!--<input type="text">
+            <label for="Bar">
                 <H3 align="center">Eu sou o Luis Miguel</H3><i class="ri-git-branch-line"></i>
             </label>-->
         </div>
