Tentando corrigir style da imagem

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                 <H3 align="center">Eu sou o Luis Miguel</H3><i class="ri-git-branch-line"></i>
             </label>-->
         </div>
-
-        <img align="center" src="Neko.png" id="Nekooo">
+        
+        <div align="center">
+            <img align="center" src="Neko.png" id="Nekooo">
+        </div>
     </body>
 </html>
