--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Início</title>
         <script src="Scripts/Script.js"></script>
     </head>
-    <body bgcolor="#ffff06">
+    <body bgcolor="#ffffb3" style="color: #ffffb3;">
         
         
         <div id="Shush" style="color: rgb(2, 100, 100);">
