--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <body bgcolor="#ffffb3" style="color: #ffffb3;">
         
         
-        <div id="Shush" style="color: rgb(2, 100, 100);">
-            <nav  id="Bar" style="color: rgb(2, 100, 100);">
+        <div id="Shush" >
+            <nav  id="Bar" >
                 <h1 id="home" align="center">Inicio</h1>
             </nav>
 
