--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Início</title>
         <script src="Scripts/Script.js"></script>
     </head>
-    <body bgcolor="#ffffb3" style="color: #ffffb3;">
+    <body bgcolor="#ffff90" style="color: #ffff90;">
         
         
         <div id="Shush" >
